# filebox

./: .env.test  .gitignore  LICENSE  Makefile  README.md  filebox.code-workspace
.github/workflows/: build.yml  test.yml
deployment/: build.sh  filebox.docker-compose.yml
migrations/: 20230208083724_create_filebox_table.down.sql
server/: .dockerignore  .env.example  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yaml
server/examples/: next_midnight.rs  redis.rs  shutdown.rs
server/migrations/: 20230208083724_create_filebox_table.up.sql
server/src/: api.rs  error.rs  errors.rs  lib.rs  middlewares.rs  routers.rs  scheduler.rs  state.rs  test_utils.rs
server/src/data/postgres/: filebox.rs  mod.rs
server/src/data/redis/: ip_allow.rs  mod.rs
server/src/dbaccess/: filebox.rs  mod.rs
server/src/handlers/: filebox.rs  general.rs  mod.rs
server/src/models/: filebox.rs  mod.rs
server/src/tests/: filebox.rs  general.rs  mod.rs
web/: .dockerignore  .env.production  README.md  dockerfile  index.html  makefile  package.json  tsconfig.json
web/src/: App.tsx  color.ts  constant.ts  context.ts  filebox.ts  index.css  router.ts  vite-env.d.ts
web/src/components/alerts/: Alerts.tsx  index.ts
web/src/components/button/: Button.module.css  Button.tsx
web/src/components/dialog/: Dialog.tsx  DialogHeader.tsx  index.ts
web/src/components/header/: Header.module.css  Header.tsx
web/src/components/input/: Cell.module.css  Cell.tsx  Input.module.css  Input.tsx
web/src/components/keyboard/: Keyboard.module.css  Keyboard.tsx  KeyboardRow.tsx  index.ts
web/src/layouts/mainLayout/: MainLayout.tsx
web/src/pages/home/: HomePage.module.css  HomePage.tsx
web/src/pages/pickup/: PickupPage.module.css  PickupPage.tsx  index.ts
web/src/pages/store/: StorePage.module.css  StorePage.tsx
web/src/service/: request.ts
