[package]
name = "server"
version = "0.1.0"
edition = "2021"
default-run = "filebox-server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "filebox-server"


[dependencies]
actix-web = "4.0.0"
actix-rt = "2"
sqlx = { version = "0.6.2", features = ["postgres", "runtime-tokio-rustls", "macros", "chrono"] }
thiserror = "1"
serde = { version = "1", features = ["derive"] }
validator = { version = "0", features = ["derive"] }
chrono = "0.4.23"
dotenvy = "0"
actix-easy-multipart = "3.0.0"
uuid = { version = "1.3.0", features = ["v4"] }
tokio_schedule = "0.3.0"
env_logger = "0.9.0"
log = "0.4.0"
actix-files = "0.6.2"
actix-cors = "0.6.4"
tiny_id = "0.1.5"
tokio = { version = "1.25.0", features = ["full"] }
dashmap = "5.4.0"
atomic_refcell = "0.1.9"
actix-http = "3.3.0"
actix-utils = "3.0.1"

[dev-dependencies]
sqlx-db-tester = "0.3.4"
